first draft for trollness analysis

--- a/src/main/resources/twitter4j.properties
+++ b/src/main/resources/twitter4j.properties
@@ -1,4 +1,4 @@
 oauth.consumerKey=Nj9ECxPKv1qrij6W1Cwpvli6r
 oauth.consumerSecret=hzQa3r8X47BznfQrc1Gcf6DM4iJHnSIDm0w3PGX6KHFZYW2tFh
-oath.accessToken=618577554-BuqYrCqdCSSXUIQiIjFdwNOIbUJw0aum0YzAakZ0
-oath.accessTokenSecret=WHTVy7CgbUaEjPKGUPV7tHPuwLyJRksnxxEwDUh2i9k3b
+oauth.accessToken=618577554-BuqYrCqdCSSXUIQiIjFdwNOIbUJw0aum0YzAakZ0
+oauth.accessTokenSecret=WHTVy7CgbUaEjPKGUPV7tHPuwLyJRksnxxEwDUh2i9k3b
