implemented deadness analysis

--- a/src/main/resources/deadnessFactors.properties
+++ b/src/main/resources/deadnessFactors.properties
@@ -1,21 +1,10 @@
-calculateScoreForVerifiedAccounts = false
+coefficient.recentTweetRatio = 40
+coefficient.significantMentionCount = 60
 
-coefficient.recentTweetCount = 20
-coefficient.linkRatio = 20
-coefficient.mentionRatio = 20
-coefficient.dailyTweetRatio = 15
-coefficient.newFollowerRatio = 10
-coefficient.followerWithDifferentLanguage = 5
-coefficient.inactiveFollowerRatio = 10
-
-
-threshold.retweetRatio = 0.2
-threshold.linkRatio = 0.2
-threshold.mentionRatio = 0.5
-threshold.dailyTweetRatio = 50
-threshold.newFollowerRatio = 0.3
-threshold.followerWithDifferentLanguageRatio = 0.3
-threshold.inactiveFollowerRatio = 0.35
-
+threshold.recentTweetRatio = 5
+threshold.recentTweetCount = 1
+threshold.totalTweetCount = 3
+threshold.significantMentionCount = 5
 
 recentTweetDateDays = 30
+searchPatterns=rip,rest in peace,miss you,heaven,goodbye,forever,memory,without you,passed away
