--- a/src/main/resources/trollnessFactors.properties
+++ b/src/main/resources/trollnessFactors.properties
@@ -1,14 +1,15 @@
 calculateScoreForVerifiedAccounts = false
 
-coefficient.retweetRatio = 20
-coefficient.linkRatio = 20
-coefficient.mentionRatio = 20
-coefficient.dailyTweetRatio = 15
+coefficient.retweetRatio = 10
+coefficient.linkRatio = 15
+coefficient.mentionRatio = 10
+coefficient.dailyTweetRatio = 10
 coefficient.newFollowerRatio = 10
 coefficient.followerWithDifferentLanguage = 5
 coefficient.inactiveFollowerRatio = 10
 #coefficient.sentiment.angerRatio = 10
 #coefficient.sentiment.sadnessRatio = 10
+coefficient.significantTweetCount = 45
 
 
 threshold.retweetRatio = 0.2
@@ -20,7 +21,9 @@ threshold.followerWithDifferentLanguageRatio = 0.3
 threshold.inactiveFollowerRatio = 0.35
 #threshold.sentiment.angerRatio = 10
 #threshold.sentiment.sadnessRatio = 10
+threshold.significantTweetCount = 5
 
 
 newFollowerDateThreshold = 30
 inactiveFollowerTweetThreshold = 10
+searchPatterns=gezizeka
