updated trollness coefficients

--- a/src/main/resources/trollnessFactors.properties
+++ b/src/main/resources/trollnessFactors.properties
@@ -1,15 +1,15 @@
 calculateScoreForVerifiedAccounts = false
 
 coefficient.retweetRatio = 10
-coefficient.linkRatio = 15
-coefficient.mentionRatio = 10
+coefficient.linkRatio = 10
+coefficient.mentionRatio = 5
 coefficient.dailyTweetRatio = 10
-coefficient.newFollowerRatio = 10
+coefficient.newFollowerRatio = 5
 coefficient.followerWithDifferentLanguage = 5
-coefficient.inactiveFollowerRatio = 10
+coefficient.inactiveFollowerRatio = 5
 #coefficient.sentiment.angerRatio = 10
 #coefficient.sentiment.sadnessRatio = 10
-coefficient.significantTweetCount = 45
+coefficient.significantTweetCount = 50
 
 
 threshold.retweetRatio = 0.2
@@ -26,4 +26,4 @@ threshold.significantTweetCount = 5
 
 newFollowerDateThreshold = 30
 inactiveFollowerTweetThreshold = 10
-searchPatterns=gezizeka
+searchPatterns= gezizeka, hain
